force-app/main/default/objects/doca_Work_Item_Junction__c/doca_Work_Item_Junction__c.object-meta.xml
<CustomObject>
    <description>DevOpsNL</description>
    <label>Work Item Junction</label>
    <nameField>
        <displayFormat>WIJ-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Item Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>