force-app/main/default/objects/doca_Work_Item_Junction__c/fields/doca_Change_Submission_1__c.field-meta.xml
<CustomField>
    <fullName>doca_Change_Submission_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Submission 1</label>
    <referenceTo>sf_devops__Change_Submission__c</referenceTo>
    <relationshipName>doca_Work_Item_Junktions_1</relationshipName>
    <type>Lookup</type>
</CustomField>