force-app/main/default/objects/doca_Work_Item_Junction__c/fields/doca_Change_Submission_2__c.field-meta.xml
<CustomField>
    <fullName>doca_Change_Submission_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Submission 2</label>
    <referenceTo>sf_devops__Change_Submission__c</referenceTo>
    <relationshipName>doca_Change_Submission_Junktions_2</relationshipName>
    <type>Lookup</type>
</CustomField>