force-app/main/default/objects/doca_Work_Item_Junction__c/fields/doca_Metadata_List__c.field-meta.xml
<CustomField>
    <fullName>doca_Metadata_List__c</fullName>
    <label>Metadata List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>