force-app/main/default/objects/doca_Work_Item_Junction__c/fields/doca_Source_Component__c.field-meta.xml
<CustomField>
    <fullName>doca_Source_Component__c</fullName>
    <formula>doca_Submit_Component__r.sf_devops__Source_Component__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Component</label>
    <type>Text</type>
</CustomField>