force-app/main/default/objects/doca_Work_Item_Junction__c/fields/doca_Submit_Component__c.field-meta.xml
<CustomField>
    <fullName>doca_Submit_Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submit Component</label>
    <referenceTo>sf_devops__Submit_Component__c</referenceTo>
    <relationshipName>doca_Change_Submission_Junktions</relationshipName>
    <type>Lookup</type>
</CustomField>