force-app/main/default/objects/doca_Work_Item_Junction__c/fields/doca_Work_Item_1__c.field-meta.xml
<CustomField>
    <fullName>doca_Work_Item_1__c</fullName>
    <label>Work Item 1</label>
    <referenceTo>sf_devops__Work_Item__c</referenceTo>
    <relationshipName>doca_Work_Item_Junktions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>