force-app/main/default/objects/doca_Work_Item_Junction__c/fields/doca_Work_Item_2__c.field-meta.xml
<CustomField>
    <fullName>doca_Work_Item_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Item 2</label>
    <referenceTo>sf_devops__Work_Item__c</referenceTo>
    <relationshipName>doca_Work_Item_Junktions_2</relationshipName>
    <type>Lookup</type>
</CustomField>