force-app/main/default/objects/doca_Work_Item_Junction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>doca_Work_Item_1__c</columns>
    <columns>doca_Work_Item_2__c</columns>
    <columns>doca_Change_Submission_1__c</columns>
    <columns>doca_Submit_Component__c</columns>
    <columns>doca_Source_Component__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>